[package]
name = "weconn"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
futures-util = "0.3.31"
russh = "0.60.3"
ssh2-config = "0.7.0"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.44"
url = "2.5.8"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
